[tool.poetry]
name = "Concept hierarchy"
version = "1.0.0"
description = ""
authors = ["Deezer Research <<research@deezer.com>", "Darius Afchar <dafchar@deezer.com>"]
packages = [
    { include = "concept_hierarchy" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow = {version = "^2.10.0", markers = "sys_platform == 'linux' or sys_platform == 'win32'"}
tensorflow-macos = {version = "^2.10.0", markers = "sys_platform == 'darwin'"}
tensorflow-metal = {version = "^0.6.0", markers = "sys_platform == 'darwin'"}
tqdm = "^4.64.1"
networkx = "^2.8.8"
jupyter ="^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pyflakes = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov=. --junitxml=xunit.xml"
junit_family = "xunit2"

